update show toolbar div css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	</div>
 
 
-	<div title="show/hide toolbar" onclick="toggleToolbar()">
+	<div id="show-toolbar" title="show/hide toolbar" onclick="toggleToolbar()">
 		<i class="material-icons">remove_red_eye</i>
 	</div>
 
