--- a/index.html
+++ b/index.html
@@ -34,26 +34,26 @@
 			Radius <p id="radVal"></p>
 			<input id="radInput" type="range" min="1" max="50" step="1"></input>
 		</div>
-		<div title="show/hide palette" onclick="togglePalette()">
+		<div title="Show/hide palette" onclick="togglePalette()">
 			<i class="material-icons">palette</i>
 		</div>
 		<div id="buttons">
 			<div title="Undo" onclick="undo()">
 				<i class="material-icons">undo</i>
 			</div>
-			<div title="load image" onclick="loadImg()">
+			<div title="Load image" onclick="loadImg()">
 				<i class="material-icons">image</i>
 			</div>
-			<div title="print" onclick="print()">
+			<div title="Print" onclick="print()">
 				<i class="material-icons">print</i>
 			</div>
-			<div title="save" onclick="saveImg()">
+			<div title="Save" onclick="saveImg()">
 				<i class="material-icons">save</i>
 			</div>
-			<div title="delete" onclick="deleteImg()">
+			<div title="Delete" onclick="deleteImg()">
 				<i class="material-icons">delete</i>
 			</div>
-			<div title="fullscreen" onclick="fullscreen()">
+			<div title="Fullscreen" onclick="fullscreen()">
 				<i class="material-icons">fullscreen</i>
 			</div>
 		</div>
@@ -63,7 +63,7 @@
 	</div>
 
 
-	<div id="show-toolbar" title="show/hide toolbar" onclick="toggleToolbar()">
+	<div id="show-toolbar" title="Show/hide toolbar" onclick="toggleToolbar()">
 		<i class="material-icons">remove_red_eye</i>
 	</div>
 
