--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta id="metaColor2" name="msapplication-navbutton-color" content="#393">
 <meta id="metaColor3" name="apple-mobile-web-app-status-bar-style" content="#393">
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
@@ -62,7 +62,7 @@
 	</div>
 
 
-	<div id="show-toolbar" title="Show/hide toolbar" onclick="toggleToolbar()">
+	<div id="showToolbar" title="Show/hide toolbar" onclick="toggleToolbar()">
 		<i class="material-icons">remove_red_eye</i>
 	</div>
 
