--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			Radius <p id="radVal"></p>
 			<input id="radInput" type="range" min="1" max="50" step="1"></input>
 		</div>
-		<div title="Show/hide palette" onclick="togglePalette()">
+		<div id="palette" title="Show/hide palette" onclick="togglePalette()">
 			<i class="material-icons">palette</i>
 		</div>
 		<div id="buttons">
