more code cleaning

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			Radius <p id="radVal"></p>
 			<input id="radInput" type="range" min="1" max="50" step="1"></input>
 		</div>
-		<div id="palette" title="Show/hide palette" onclick="togglePalette()">
+		<div id="paletteBtn" title="Show/hide palette" onclick="togglePalette()">
 			<i class="material-icons">palette</i>
 		</div>
 		<div id="buttons">
@@ -64,7 +64,7 @@
 	</div> <!-- end inner toolbar -->
 
 
-	<div id="showToolbar" title="Show/hide toolbar" onclick="toggleToolbar()">
+	<div id="showToolbarBtn" title="Show/hide toolbar" onclick="toggleToolbar()">
 		<i class="material-icons">remove_red_eye</i>
 	</div>
 
