--- a/index.html
+++ b/index.html
@@ -39,30 +39,17 @@
 			<i class="material-icons">palette</i>
 		</div>
 		<div id="buttons">
-			<div title="Undo" onclick="undo()">
-				<i class="material-icons">undo</i>
-			</div>
-			<div title="Load image" onclick="loadImg()">
-				<i class="material-icons">image</i>
-			</div>
-			<div title="Print" onclick="print()">
-				<i class="material-icons">print</i>
-			</div>
-			<div title="Save" onclick="saveImg()">
-				<i class="material-icons">save</i>
-			</div>
-			<div title="Delete" onclick="deleteImg()">
-				<i class="material-icons">delete</i>
-			</div>
-			<div title="Fullscreen" onclick="fullscreen()">
-				<i class="material-icons">fullscreen</i>
-			</div>
+			<i class="material-icons" title="Undo" onclick="undo()">undo</i>
+			<i class="material-icons" title="Load image" onclick="loadImg()">image</i>
+			<i class="material-icons" title="Print" onclick="print()">print</i>
+			<i class="material-icons" title="Save" onclick="saveImg()">save</i>
+			<i class="material-icons" title="Delete" onclick="deleteImg()">delete</i>
+			<i class="material-icons" title="Fullscreen" onclick="fullscreen()">fullscreen</i>
 		</div>
 
 	<div id="colors"></div>
 
 	</div> <!-- end inner toolbar -->
-
 
 	<div id="showToolbarBtn" title="Show/hide toolbar" onclick="toggleToolbar()">
 		<i class="material-icons">remove_red_eye</i>
