--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
 <div id="toolbar">
 	<div id="innerToolbar">
-		<div>
+		<img src="img/doodle_icon.svg" width="48px">
+		<b>Doodle Pad</b>
+		<div id="radDiv">
 			Radius <p id="radVal"></p>
 			<input id="radInput" type="range" min="1" max="50" step="1"></input>
 		</div>
