add invert, doc undo bug

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 			<i class="material-icons" title="Save" onclick="saveImg()">save</i>
 			<i class="material-icons" title="Delete" onclick="deleteImg()">delete</i>
 			<i class="material-icons" title="Fullscreen" onclick="fullscreen()">fullscreen</i>
+			<i class="material-icons" title="Invert" onclick="invert()">invert_colors</i>
 		</div>
 
 	<div id="colors"></div>
