--- a/index.html
+++ b/index.html
@@ -47,15 +47,14 @@
 			<i class="material-icons" title="Delete" onclick="deleteImg()">delete</i>
 			<i class="material-icons" title="Fullscreen" onclick="fullscreen()">fullscreen</i>
 			<i class="material-icons" title="Invert" onclick="invert()">invert_colors</i>
+			<i class="material-icons" title="Grayscale" onclick="grayscale()">opacity</i>
 		</div>
 
 	<div id="colors"></div>
 
 	</div> <!-- end inner toolbar -->
 
-	<div id="showToolbarBtn" title="Show/hide toolbar" onclick="toggleToolbar()">
-		<i class="material-icons">remove_red_eye</i>
-	</div>
+	<i class="material-icons" id="showToolbarBtn" title="Show/hide toolbar" onclick="toggleToolbar()">remove_red_eye</i>
 
 </div> <!-- end toolbar -->
 
