add lighten and darken

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 		<div id="moreDiv">
 			<i class="material-icons" title="Invert" onclick="invert()">invert_colors</i>
 			<i class="material-icons" title="Grayscale" onclick="grayscale()">opacity</i>
+			<i class="material-icons" title="Lighten" onclick="lighten()">brightness_7</i>
+			<i class="material-icons" title="Darken" onclick="darken()">brightness_2</i>
 		</div>
 
 	<div id="colors"></div>
