--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <link rel="stylesheet" type="text/css" href="styles.css">
 <script type="text/javascript" src="scripts.js"></script>
+<script type="text/javascript" src="floodfill.js"></script>
 
 </head>
 <body>
@@ -55,6 +56,9 @@
 		</div>
 
 	<div id="colors"></div>
+
+	<i class="material-icons tool" title="Brush" onclick="setTool('draw', this);">brush</i>
+	<i class="material-icons tool" title="Fill" onclick="setTool('fill', this);">format_paint</i>
 
 	</div> <!-- end inner toolbar -->
 
